# rules_ios

./: .bazelrc  BUILD.bazel  WORKSPACE
rules/: app.bzl  hmap.bzl  library.bzl  precompiled_apple_resource_bundle.bzl  repositories.bzl  xcodeproj.bzl
tests/ios-application-with-ios-framework/ios/: BUILD.bazel
tests/ios-application-with-ios-framework/ios/MySwiftApp/: AppDelegate.swift
tests/ios-application-with-ios-framework/ios/MySwiftFramework/: Fancy.swift  example-resource.txt
tests/ios/app/: BUILD.bazel
tests/ios/extensions/: BUILD.bazel
tests/ios/unit-test/test-imports-app/: BUILD.bazel  Car.h  Car.m  empty.swift  test-imports-app-Bridging-Header.h  test.swift
tests/ios/xcodeproj/: BUILD.bazel
tests/ios/xcodeproj/Single-Static-Framework-Project.xcodeproj/: project.pbxproj
tests/ios/xcodeproj/TestWithHostApp.xcodeproj/: project.pbxproj
tests/ios/xcodeproj/Xcodebuild-Single-Static-Framework-Project.xcodeproj/: project.pbxproj
tests/macos/xcodeproj/Single-Application-Project-AllTargets.xcodeproj/: project.pbxproj
tests/macos/xcodeproj/Single-Application-Project-DirectTargetsOnly.xcodeproj/: project.pbxproj
tests/macos/xcodeproj/Test-Target-With-Test-Host-Project.xcodeproj/: project.pbxproj
tests/mixed-source-app/ios/: BUILD.bazel
tests/mixed-source-app/ios/App/Source/: AppDelegate.swift  SceneDelegate.swift  ViewController.m  ViewController.swift
tests/mixed-source-app/ios/MixedSourceFramework/: MixedSourceFramework.h
tests/mixed-source-app/ios/MixedSourceFramework/Logger/: Logger.h  Logger.m
tests/mixed-source/ios/: BUILD.bazel
tests/mixed-source/ios/DependsOnMixedSourceFramework/: DependsOnMixedSourceFramework.swift
tools/xcodeproj_shims/: install.sh  xcodeproj-installer.sh
tools/xcodeproj_shims/installers/: dsyms.sh
