load("@build_bazel_rules_apple//apple:ios.bzl", "ios_extension")

ios_extension(
    name = "ExampleExtension",
    families = [
        "iphone",
    ],
    infoplists = [
        "ExampleExtension/Info.plist",
    ],
    bundle_id = "com.example.app.example-extension",
    minimum_os_version = "10.0",
    visibility = ["//visibility:public"],
    deps = [
        "//tests/ios/app:FW"
    ],
)

