load("//rules:framework.bzl", "apple_framework")

apple_framework(
    name = "MixedSourceFramework",
    srcs = glob(
        [
            "MixedSourceFramework/**/*.h",
            "MixedSourceFramework/**/*.m",
            "MixedSourceFramework/**/*.swift",
        ],
        exclude = ["MixedSourceFramework/MixedSourceFramework.h"],
    ),
    visibility = ["//visibility:public"],
)

apple_framework(
    name = "DependsOnMixedSourceFramework",
    srcs = glob(["DependsOnMixedSourceFramework/**/*.swift"]),
    deps = [":MixedSourceFramework"]
)
